# actix-surrealdb

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/db/: db.rs
src/model/: model.rs
src/routes/: cell.rs  column.rs  mod.rs  row.rs  table.rs
