[package]
name = "surrealdb-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
bounce = "0.9.0"
once_cell = "1.19.0"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
surrealdb = "1.1.1"
thiserror = "1.0.63"
